# GrowtopiaServer

./: .gitignore  CMakeLists.txt  packets.md
src/: main.cpp
src/database/: world_db.cpp  world_db.h
src/enums/: block_types.h
src/handlers/: LoginHandler.cpp  LoginHandler.h  PacketHandler.cpp  PacketHandler.h  login_handler.cpp  login_handler.h
src/helpers/: compression.cpp  compression.h  encoding.cpp  encoding.h  login_parser.cpp  login_parser.h  random.h  string.cpp  string.h  system.cpp  system.h
src/objects/: player.cpp  player.h
src/packets/: gamepacket.cpp  gamepacket.h
src/server/: udp_server.cpp  udp_server.h
